@@ -1,6 +1,6 @@
 Package: GeneralizedHyperbolic
-Version: 0.8-1
-Date: 2012-04-13
+Version: 0.8-2
+Date: 2012-04-19
 Title: The Generalized Hyperbolic Distribution
 Author: David Scott <d.scott@auckland.ac.nz>
 Maintainer: David Scott <d.scott@auckland.ac.nz>
