@@ -1,4 +1,4 @@
-Round the parameter values in the test parameter sets rather than using values with many digits. Also include reference values for cdf obtained from Maple.
+Include reference values for cdf obtained from Maple and from Runuran
 
 Have pdf return NA and warning rather than stop when encountering
 wrong parameter values.
