@@ -28,9 +28,10 @@
   chosen by choosing values of \eqn{\xi}{xi} and \eqn{\chi}{chi} which
   range over the shape triangle, then the function \code{nigChangePars}
   was applied to convert them to the \eqn{\alpha, \beta}{alpha, beta}
-  parameterization. See the examples for the values of \eqn{\xi}{xi} and
-  \eqn{\chi}{chi} for the large parameter sets.
-}
+  parameterization. The resulting \eqn{\alpha, \beta}{alpha, beta}
+  values were then rounded to one decimal place. See the examples for
+  the values of \eqn{\xi}{xi} and \eqn{\chi}{chi} for the large
+  parameter sets.  }
 
 \usage{
   nigSmallShape
